# unit

./: .gitignore  CHANGELOG.md  Cargo.toml  cabal.project  flake.nix  unit-lang.cabal
app/: Cli.hs  Main.hs
src/: Ast.hs  Eval.hs  Parser.hs  cli.rs  main.rs
src/parser/: mod.rs
test/: Main.hs
