[package]
name = "unit"
version = "0.1.0"
edition = "2021"
authors = ["Elizabeth Paź <me@ehllie.xyz>"]
description = "A small personal language project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ariadne = "0.1.5"
chumsky = "0.9.0"
clap = { version = "4.1.6", features = ["derive"] }
clap_complete = "4.1.3"
