cabal-version:   3.0
name:            unit-lang
version:         0.1.0.0
synopsis:        A small personal language project

-- description:
license:         MPL-2.0
license-file:    LICENSE
author:          Elizabeth Paź
maintainer:      me@ehllie.xyz

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common common
  ghc-options:        -Wall
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    OverloadedStrings

  build-depends:
    , base
    , text

library
  import:          common
  exposed-modules:
    Ast
    Parser

  -- other-extensions:
  hs-source-dirs:  src
  build-depends:
    , containers
    , megaparsec
    , parser-combinators

executable unit
  import:         common
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  unit-lang
  hs-source-dirs: app
  build-depends:  optparse-applicative
  other-modules:  Cli

test-suite unit-test
  import:         common

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  unit-lang
